Fix avatar on Safari

--- a/src/bio_1/css/split-opl.webflow.css
+++ b/src/bio_1/css/split-opl.webflow.css
@@ -181,7 +181,7 @@ a {
 .dao-talks img {
   display: block;
   width: auto;
-  height: 100%;
+  height: 3.25rem;
 }
 .dao-talks-title {
   text-transform: uppercase;
